--- a/contact.html
+++ b/contact.html
@@ -6,12 +6,23 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
 
+
+    <div class="topnav">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="products.html">Products</a>
+        <a href="ctso.html">Ctso</a>
+        <a href="contact.html">Contact</a>
+    </div>
+
     <h2>CSS Template using Flexbox</h2>
-    <p>In this example, we have created a header, three unequal columns and a footer. On smaller screens, the columns will stack
+    <p>In this example, we have created a header, three unequal columns and a footer. On smaller screens, the columns
+        will stack
         on top of each other. Resize the browser window to see the responsive effect.</p>
     <p>
         <strong>Note:</strong> Flexbox is not supported in Internet Explorer 10 and earlier versions.</p>
