--- a/ctso.html
+++ b/ctso.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html>
 
-<!-- 
-    Author: Khalel Abaquin
--->
-
 <head>
     <title>About the CTSO</title>
     <meta charset="utf-8" />
@@ -13,16 +9,16 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a></a></li>
-                <li><a></a></li>
-                <li><a></a></li>
-                <li><a></a></li>
-            </ul>
-        </nav>
-    </header>
+
+    <div class="topnav">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="products.html">Products</a>
+        <a href="ctso.html">Ctso</a>
+        <a href="contact.html">Contact</a>
+    </div>
+
+    <p> This is the CTSO page</p>
 </body>
 
 </html>
