--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
 
     <div class="topnav">
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">products</a>
-        <a href="#">Ctso</a>
-        <a href="#">contact</a>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="products.html">Products</a>
+        <a href="ctso.html">Ctso</a>
+        <a href="contact.html">Contact</a>
     </div>
 
     <div class="content">
