--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <title>About the Program</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="about.css" />
     <link rel="stylesheet" href="main.css" />
 </head>
 
@@ -17,8 +18,7 @@
         <a href="ctso.html">Ctso</a>
         <a href="contact.html">Contact</a>
     </div>
-
-    <p>This is the about page</p>
+    <h2>Have some questions? We have answers!</h2>
 </body>
 
 </html>
