--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- add some type of registration form -->
+<!-- link instagram acount in footer -->
+<!-- add link for tax credit donations -->
+<!-- add calendar? -->
+
 <head>
     <title>Physical Threopy</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="home.css">
-    <link rel="stylesheet" href="main.css">
+    <!-- <link rel="stylesheet" href="main.css"> -->
 </head>
 
 <body>
-
+    <header>
+        <img src="northwest.png" alt="" />
+    </header>
     <div class="topnav">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
@@ -20,8 +27,21 @@
     </div>
 
     <div class="content">
-        <h2>CSS Template</h2>
+        <h2>What goes on the home page?</h2>
         <p>A topnav, content and a footer.</p>
+    </div>
+    <div class="content">
+        <p> ipsum dolor sit amet consectetur adipisicing elit. Suscipit voluptate modi necessitatibus exercitationem
+            enim asperiores tenetur quos aperiam. Consequuntur, veniam rem? Temporibus, quae voluptatem corporis vitae
+            reprehenderit laudantium quibusdam praesentium. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Blanditiis dolores delectus harum repellendus, in omnis, ducimus molestiae rem quas illo hic quis repellat
+            inventore, rerum architecto cum excepturi nisi? Ex. </p>
+    </div>
+    <div class="content">
+        <p> ipsum dolor sit amet consectetur adipisicing elit. Odio eos nam at, voluptates tempore, aspernatur iusto
+            excepturi ab aut sed, eveniet recusandae enim illo minus! Quod minus consequatur rerum libero? Lorem ipsum
+            dolor sit amet consectetur adipisicing elit. Neque eveniet eius repellendus magnam numquam, atque iusto!
+            Odio dicta ipsum, labore vitae omnis, pariatur dolore blanditiis ducimus atque quisquam sequi cumque! </p>
     </div>
 
     <div class="footer">
