--- a/contact.html
+++ b/contact.html
@@ -10,13 +10,14 @@
 </head>
 
 <body>
-
-
+    <header>
+        <img src="northwest.png" alt="" />
+    </header>
     <div class="topnav">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="products.html">Products</a>
-        <a href="ctso.html">Ctso</a>
+        <a href="ctso.html">CTSO</a>
         <a href="contact.html">Contact</a>
     </div>
 
