--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- add some type of registration form -->
-<!-- link instagram acount in footer -->
-<!-- add link for tax credit donations -->
-<!-- add calendar? -->
-
 <head>
     <title>Physical Threopy</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="home.css">
-    <!-- <link rel="stylesheet" href="main.css"> -->
+    <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
@@ -22,7 +17,7 @@
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="products.html">Products</a>
-        <a href="ctso.html">Ctso</a>
+        <a href="ctso.html">CTSO</a>
         <a href="contact.html">Contact</a>
     </div>
 
