--- a/about.html
+++ b/about.html
@@ -10,15 +10,72 @@
 </head>
 
 <body>
-
+    <header>
+        <img src="northwest.png" alt="" />
+    </header>
     <div class="topnav">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="products.html">Products</a>
-        <a href="ctso.html">Ctso</a>
+        <a href="ctso.html">CTSO</a>
         <a href="contact.html">Contact</a>
     </div>
     <h2>Have some questions? We have answers!</h2>
+    <div class="answers" />
+    <h3>What is physical therapy?</h3>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit mollitia in fugit obcaecati sit, amet porro
+        quis, omnis veniam laudantium aut quaerat. Nulla eius quisquam modi ipsa reiciendis itaque enim. Lorem ipsum
+        dolor sit amet consectetur adipisicing elit. Eveniet sint possimus quidem repudiandae non. Earum provident
+        perspiciatis est fugiat, tempora reprehenderit, sunt aliquam qui ut quaerat officia iusto sint quo? </p>
+    </div>
+    <div class="answers" />
+    <h3>What does this program have to offer me?</h3>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit mollitia in fugit obcaecati sit, amet porro
+        quis, omnis veniam laudantium aut quaerat. Nulla eius quisquam modi ipsa reiciendis itaque enim. Lorem ipsum
+        dolor sit amet consectetur adipisicing elit. Eveniet sint possimus quidem repudiandae non. Earum provident
+        perspiciatis est fugiat, tempora reprehenderit, sunt aliquam qui ut quaerat officia iusto sint quo? </p>
+    </div>
+    <div class="answers" />
+    <h3>What do I need to know in order to be successful in this program?</h3>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit mollitia in fugit obcaecati sit, amet porro
+        quis, omnis veniam laudantium aut quaerat. Nulla eius quisquam modi ipsa reiciendis itaque enim. Lorem ipsum
+        dolor sit amet consectetur adipisicing elit. Eveniet sint possimus quidem repudiandae non. Earum provident
+        perspiciatis est fugiat, tempora reprehenderit, sunt aliquam qui ut quaerat officia iusto sint quo? </p>
+    </div>
+    <div class="answers" />
+    <h3>What will I be doing in class?</h3>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit mollitia in fugit obcaecati sit, amet porro
+        quis, omnis veniam laudantium aut quaerat. Nulla eius quisquam modi ipsa reiciendis itaque enim. Lorem ipsum
+        dolor sit amet consectetur adipisicing elit. Eveniet sint possimus quidem repudiandae non. Earum provident
+        perspiciatis est fugiat, tempora reprehenderit, sunt aliquam qui ut quaerat officia iusto sint quo? </p>
+    </div>
+    <div class="answers" />
+    <h3>How long is this program?</h3>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit mollitia in fugit obcaecati sit, amet porro
+        quis, omnis veniam laudantium aut quaerat. Nulla eius quisquam modi ipsa reiciendis itaque enim. Lorem ipsum
+        dolor sit amet consectetur adipisicing elit. Eveniet sint possimus quidem repudiandae non. Earum provident
+        perspiciatis est fugiat, tempora reprehenderit, sunt aliquam qui ut quaerat officia iusto sint quo? </p>
+    </div>
+    <div>
+        <!-- <h3></h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit mollitia in fugit obcaecati sit, amet porro
+            quis, omnis veniam laudantium aut quaerat. Nulla eius quisquam modi ipsa reiciendis itaque enim.</p>
+    </div>
+    <div>
+        <h3></h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit mollitia in fugit obcaecati sit, amet porro
+            quis, omnis veniam laudantium aut quaerat. Nulla eius quisquam modi ipsa reiciendis itaque enim.</p>
+    </div>
+    <div>
+        <h3></h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit mollitia in fugit obcaecati sit, amet porro
+            quis, omnis veniam laudantium aut quaerat. Nulla eius quisquam modi ipsa reiciendis itaque enim.</p>
+    </div>
+    <div>
+        <h3></h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit mollitia in fugit obcaecati sit, amet porro
+            quis, omnis veniam laudantium aut quaerat. Nulla eius quisquam modi ipsa reiciendis itaque enim.</p>
+    </div> -->
 </body>
 
 </html>
