--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Physical Threopy</title>
+    <title>Physical Therapy</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="home.css">
@@ -16,7 +16,7 @@
     <div class="topnav">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
-        <a href="products.html">Products</a>
+        <a href="services.html">Services</a>
         <a href="ctso.html">CTSO</a>
         <a href="contact.html">Contact</a>
     </div>
@@ -38,11 +38,15 @@
             dolor sit amet consectetur adipisicing elit. Neque eveniet eius repellendus magnam numquam, atque iusto!
             Odio dicta ipsum, labore vitae omnis, pariatur dolore blanditiis ducimus atque quisquam sequi cumque! </p>
     </div>
-
+    <!-- 
     <div class="footer">
         <p>Footer</p>
-    </div>
+    </div> -->
 
 </body>
+
+<footer>
+    <p>This is the footer</p>
+</footer>
 
 </html>
