--- a/services.html
+++ b/services.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Products</title>
+    <title>Services</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="main.css" />
@@ -15,13 +15,16 @@
     <div class="topnav">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
-        <a href="products.html">Products</a>
+        <a href="services.html">Services</a>
         <a href="ctso.html">CTSO</a>
         <a href="contact.html">Contact</a>
     </div>
 
-    <p>This is the products page</p>
+    <p>This is the services page</p>
 
 </body>
+<footer>
+    <p>This is the footer</p>
+</footer>
 
 </html>
