--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
     <div class="topnav">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
-        <a href="products.html">Products</a>
+        <a href="services.html">Services</a>
         <a href="ctso.html">CTSO</a>
         <a href="contact.html">Contact</a>
     </div>
@@ -77,5 +77,8 @@
             quis, omnis veniam laudantium aut quaerat. Nulla eius quisquam modi ipsa reiciendis itaque enim.</p>
     </div> -->
 </body>
+<footer>
+    <p>This is the footer</p>
+</footer>
 
 </html>
