--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
     <div class="topnav">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
-        <a href="products.html">Products</a>
+        <a href="services.html">Services</a>
         <a href="ctso.html">CTSO</a>
         <a href="contact.html">Contact</a>
     </div>
@@ -37,11 +37,9 @@
         <div class="column middle" style="background-color:#bbb;">Column</div>
         <div class="column side" style="background-color:#ccc;">Column</div>
     </div>
-
-    <div class="footer">
-        <p>Footer</p>
-    </div>
-
 </body>
+<footer>
+    <p>This is the footer</p>
+</footer>
 
 </html>
