--- a/ctso.html
+++ b/ctso.html
@@ -15,12 +15,17 @@
     <div class="topnav">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
-        <a href="products.html">Products</a>
+        <a href="services.html">Services</a>
         <a href="ctso.html">CTSO</a>
         <a href="contact.html">Contact</a>
     </div>
 
     <p> This is the CTSO page</p>
 </body>
+<footer>
+    <p>This is the footer</p>
+</footer>
 
 </html>
+
+<!-- fundraisers/donations -->
